[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/UI/Carnet/script_carnet/Carnet_Control.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/Carnet/Journal/boutontournepage1.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/Carnet/Journal/journalmarquepage1.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/Carnet/Journal/journalmarquepage2.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/Carnet/croix_pressed.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/Carnet/croix_normal.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/Carnet/Sons/PageTourne.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/UI/Carnet/Sons/Ouverture carnet.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/UI/Carnet/Sons/Fermeture carnet.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/UI/Carnet/Journal/journalfond.png" type="Texture" id=10]
[ext_resource path="res://Assets/UI/Carnet/Journal/journalliens.png" type="Texture" id=11]
[ext_resource path="res://Assets/UI/Carnet/Journal/boutontournepage2.png" type="Texture" id=12]
[ext_resource path="res://Assets/UI/Carnet/Sons/TournerPlrsPage02.ogg" type="AudioStream" id=13]
[ext_resource path="res://Assets/UI/Carnet/Sons/TournerPlrsPage01.ogg" type="AudioStream" id=14]
[ext_resource path="res://Assets/UI/Carnet/Journal/boutonpageprec1.png" type="Texture" id=15]
[ext_resource path="res://Assets/UI/Carnet/Journal/boutonpageprec2.png" type="Texture" id=16]

[sub_resource type="Animation" id=1]
resource_name = "Disparition"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 0.979
margin_top = -23.0
margin_bottom = -0.320068
rect_pivot_offset = Vector2( 960, 540 )
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="journalfond" type="Sprite" parent="."]
position = Vector2( 946.956, 506.28 )
scale = Vector2( 0.996309, 0.882749 )
texture = ExtResource( 10 )

[node name="Container" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 80
custom_constants/margin_top = 80
custom_constants/margin_left = 80
custom_constants/margin_bottom = 80
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Container"]
margin_left = 80.0
margin_top = 80.0
margin_right = 1840.0
margin_bottom = 999.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="journalliens" type="Sprite" parent="Container/VBoxContainer"]
position = Vector2( 880, 464 )
scale = Vector2( 1.08958, 1.04286 )
texture = ExtResource( 11 )

[node name="HBoxContainer" type="HBoxContainer" parent="Container/VBoxContainer"]
margin_right = 1760.0
margin_bottom = 245.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="Container/VBoxContainer/HBoxContainer"]
margin_left = 654.0
margin_right = 878.0
margin_bottom = 245.0
mouse_filter = 1
size_flags_horizontal = 10
custom_constants/margin_right = 50
custom_constants/margin_top = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RetourMenu" type="TextureButton" parent="Container/VBoxContainer/HBoxContainer/MarginContainer"]
margin_top = 5.0
margin_right = 174.0
margin_bottom = 245.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="Container/VBoxContainer/HBoxContainer"]
margin_left = 1656.0
margin_right = 1760.0
margin_bottom = 245.0
mouse_filter = 1
size_flags_horizontal = 10
custom_constants/margin_right = 40
custom_constants/margin_top = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Croix" type="TextureButton" parent="Container/VBoxContainer/HBoxContainer/MarginContainer2"]
margin_top = 50.0
margin_right = 64.0
margin_bottom = 245.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="Container/VBoxContainer"]
margin_top = 752.0
margin_right = 1760.0
margin_bottom = 919.0
mouse_filter = 2
size_flags_vertical = 10

[node name="MarginContainer" type="MarginContainer" parent="Container/VBoxContainer/HBoxContainer2"]
margin_right = 185.0
margin_bottom = 167.0
mouse_filter = 1
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PagePrecedente" type="TextureButton" parent="Container/VBoxContainer/HBoxContainer2/MarginContainer"]
show_behind_parent = true
margin_left = 10.0
margin_top = 10.0
margin_right = 185.0
margin_bottom = 157.0
rect_pivot_offset = Vector2( 82, 76 )
texture_normal = ExtResource( 15 )
texture_hover = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="Container/VBoxContainer/HBoxContainer2"]
margin_left = 1575.0
margin_right = 1760.0
margin_bottom = 167.0
mouse_filter = 1
size_flags_horizontal = 10
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PageSuivante" type="TextureButton" parent="Container/VBoxContainer/HBoxContainer2/MarginContainer2"]
margin_top = 10.0
margin_right = 175.0
margin_bottom = 157.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Disparition = SubResource( 1 )

[node name="Sons" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="OuvertureCarnet" type="AudioStreamPlayer" parent="Sons"]
stream = ExtResource( 8 )

[node name="FermetureCarnet" type="AudioStreamPlayer" parent="Sons"]
stream = ExtResource( 9 )

[node name="PageTourne" type="AudioStreamPlayer" parent="Sons"]
stream = ExtResource( 7 )

[node name="RetourMenu" type="AudioStreamPlayer" parent="Sons"]
stream = ExtResource( 13 )

[node name="PlrsPages" type="AudioStreamPlayer" parent="Sons"]
stream = ExtResource( 14 )
[connection signal="pressed" from="Container/VBoxContainer/HBoxContainer/MarginContainer/RetourMenu" to="." method="_on_RetourMenu_pressed"]
[connection signal="pressed" from="Container/VBoxContainer/HBoxContainer/MarginContainer2/Croix" to="." method="_on_Croix_pressed"]
[connection signal="pressed" from="Container/VBoxContainer/HBoxContainer2/MarginContainer/PagePrecedente" to="." method="_on_PagePrecedente_pressed"]
[connection signal="pressed" from="Container/VBoxContainer/HBoxContainer2/MarginContainer2/PageSuivante" to="." method="_on_PageSuivante_pressed"]
[connection signal="finished" from="Sons/FermetureCarnet" to="." method="_on_FermetureCarnet_finished"]
